Fixed an alignment issue of the image cards on the same row when the description section of one of the cards is opened

--- a/src/components/DisplayGrid/styles.scss
+++ b/src/components/DisplayGrid/styles.scss
@@ -2,6 +2,6 @@
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: flex-start;
 	flex-wrap: wrap;
 }
